@@ -1,6 +1,8 @@
 == 0.9.5 / ???
 
 * Restore support for each_with_index() over Bud collections
+* Support user-specified code blocks in argagg(), argmin() and argmax()
+* Fix bug in chaining argmin() or argmax() expressions
 
 == 0.9.4 / 2012-09-06
 
